<resources>
    <string name="app_name">Paper Vault</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="firsttest_gmail_com">FirstTest@gmail.com</string>
    <string name="first_test">First Test</string>
    <string name="nav_home">Home</string>
    <string name="nav_my_receipts">My Receipts</string>
    <string name="nav_my_favourite">My Favourite</string>
    <string name="nav_statistics">Statistics</string>
    <string name="nav_settings">Settings</string>
    <string name="user_profile_image_desc">User Profile Image</string>
    <string name="action_info">Info</string>
    <string name="Tab_store">Store</string>
    <string name="Tab_all_receipts">All Receipts</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sort_near_me_list">Sort receipts list for stores that are near you</string>
    <string name="sort_list_by_price">Sort receipts list by price</string>
    <string name="sort_list_by_date">Sort receipts list by date</string>
    <string name="sort_list_alphabetically">Sort receipts list alphabetically</string>
    <string name="sort_list">Sort list</string>
    <string name="my_receipts_text">My Receipts</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="Table_Store_Title">Store</string>
    <string name="Table_Date_title">Date</string>
    <string name="Table_Price_Title">Price</string>

    <string name="profile_string">Profile</string>
    <string name="Sign_Out_string">Sign Out</string>
    <string name="new_receipts_header">New Receipt</string>



    <!-- Strings related to login -->
    <string name="title_activity_login">Sign in</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to Register-->

    <string name="first_name_missing">Please Enter First Name</string>
    <string name="last_name_missing">Please Enter Last Name</string>
    <string name="email_missing">Please Enter Email Address</string>
    <string name="password_missing">Please Enter Secure Password</string>


    <!--FireBase Database Fields-->
    <string name="dbname_Users">users</string>
    <string name="sign_out">Sign out</string>





</resources>
