<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_Home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_my_receipts"
            android:icon="@drawable/ic_receipt"
            android:title="@string/nav_my_receipts" />
        <item
            android:id="@+id/nav_my_favourite"
            android:icon="@drawable/ic_stars"
            android:title="@string/nav_my_favourite" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_action_line_chart"
            android:title="@string/nav_statistics" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_applications"
            android:title="@string/nav_settings" />
    </group>

</menu>
