<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@color/colorSecondary"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">
    <!--TODO Change Navigation bar from color to custom made Background-->
    <ImageView
        android:id="@+id/user_profile_img"
        android:layout_width="80dp"
        android:layout_height="140dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/user_profile_image_desc"
        android:scaleType="centerCrop"
        android:src="@drawable/profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/user_profile_mail_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.49" />

    <TextView
        android:id="@+id/user_profile_mail_txt"
        android:layout_width="140dp"
        android:layout_height="26dp"
        android:gravity="center"
        android:layout_marginStart="8dp"
        android:text="@string/firsttest_gmail_com"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/user_profile_img"
        app:layout_constraintTop_toBottomOf="@+id/user_profile_name_txt" />

    <TextView
        android:id="@+id/user_profile_name_txt"
        android:layout_width="74dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:text="@string/first_test"
        app:layout_constraintBottom_toTopOf="@+id/user_profile_mail_txt"
        app:layout_constraintStart_toEndOf="@+id/user_profile_img"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>
