<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.MyReceipts">

    <!---->

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center"
        android:elevation="0dp"
        android:theme="@style/AppTheme.AppBarOverlay"

        >
        <android.support.v7.widget.Toolbar
            android:id="@+id/my_receipt_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Light"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            >
            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:gravity="left"
                android:text="@string/my_receipts_text"
                android:textColor="@android:color/white"
                android:textSize="22sp"
                android:textStyle="bold" />
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.TabLayout
        android:id="@+id/my_receipt_tab_layOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryLight"
        app:tabSelectedTextColor="@android:color/white"
        app:tabTextColor="@android:color/black"
        app:tabIndicatorHeight="5dp">

        <android.support.design.widget.TabItem
            android:id="@+id/tab_item_Store"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/Tab_store"
            android:textAlignment="center" />

        <android.support.design.widget.TabItem
            android:id="@+id/tab_item_all_receipts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Tab_all_receipts" />

    </android.support.design.widget.TabLayout>


    <android.support.v4.view.ViewPager
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/tab_view_pager"/>

</LinearLayout>