<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relaOut1">


        <TableLayout
            android:id="@+id/table_lay_out"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="*">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorSecondary">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:id="@+id/relaOut2">
                    <TextView
                        android:id="@+id/StoreName_table_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="5dip"
                        android:text="@string/Table_Store_Title"
                        android:textColor="@android:color/white"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        />

                    <TextView
                        android:id="@+id/Date_table_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="5dip"
                        android:text="@string/Table_Date_title"
                        android:textColor="@android:color/white"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true"/>

                    <TextView
                        android:id="@+id/Price_table_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="5dip"
                        android:text="@string/Table_Price_Title"
                        android:textColor="@android:color/white"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        android:layout_toRightOf="@id/Date_table_txt"
                        android:layout_marginStart="40dp"
                        android:layout_centerVertical="true"/>
                </RelativeLayout>
            </TableRow>


        </TableLayout>



    </RelativeLayout>


</RelativeLayout>